# tgpd

./: README.md  main.py  project_configure.json  pyproject.toml  requirements.txt  setup.py
complete/fig/: tgpd.ts
complete/zsh/: _tgpd
tgpd/: __config__.py  __init__.py  main.py
